--- a/source/Director-free/css/style.css
+++ b/source/Director-free/css/style.css
@@ -12,6 +12,8 @@
 */
 html,
 body {
+  top: -60px;
+
   overflow-x: hidden!important;
   /*font-family: 'Source Sans Pro', sans-serif;*/
   font-family: 'Lato', sans-serif;
@@ -31,7 +33,8 @@ a:focus {
 }
 /* Layouts */
 .wrapper {
-  min-height: 100%;
+  max-height: 1px;
+  min-height: 0%;
 }
 .wrapper:before,
 .wrapper:after {
@@ -43,6 +46,7 @@ a:focus {
 }
 /* Header */
 body > .header {
+  display: none;
   position: absolute;
   top: 0;
   left: 0;
@@ -68,7 +72,7 @@ body > .header {
 }
 @media screen and (min-width: 992px) {
   .left-side {
-    top: 50px;
+    top: 0px;
   }
   /*Right side strech mode*/
   .right-side.strech {
